@@ -386,6 +386,22 @@ name|SERVER_ERROR
 import|;
 end_import
 
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
+name|ConfigSetProperties
+operator|.
+name|IMMUTABLE_CONFIGSET_ARG
+import|;
+end_import
+
 begin_comment
 comment|/**  *<p>  * This processor will dynamically add fields to the schema if an input document contains  * one or more fields that don't match any field or dynamic field in the schema.  *</p>  *<p>  * By default, this processor selects all fields that don't match a schema field or  * dynamic field.  The "fieldName" and "fieldRegex" selectors may be specified to further  * restrict the selected fields, but the other selectors ("typeName", "typeClass", and  * "fieldNameMatchesSchemaField") may not be specified.  *</p>  *<p>  * This processor is configured to map from each field's values' class(es) to the schema  * field type that will be used when adding the new field to the schema.  All new fields  * are then added to the schema in a single batch.  If schema addition fails for any  * field, addition is re-attempted only for those that donât match any schema  * field.  This process is repeated, either until all new fields are successfully added,  * or until there are no new fields (presumably because the fields that were new when  * this processor started its work were subsequently added by a different update  * request, possibly on a different node).  *</p>  *<p>  * This processor takes as configuration a sequence of zero or more "typeMapping"-s from  * one or more "valueClass"-s, specified as either an&lt;arr&gt; of&lt;str&gt;, or  * multiple&lt;str&gt; with the same name, to an existing schema "fieldType".  *</p>  *<p>  * If more than one "valueClass" is specified in a "typeMapping", field values with any  * of the specified "valueClass"-s will be mapped to the specified target "fieldType".  * The "typeMapping"-s are attempted in the specified order; if a field value's class  * is not specified in a "valueClass", the next "typeMapping" is attempted. If no  * "typeMapping" succeeds, then the specified "defaultFieldType" is used.   *</p>  *<p>  * Example configuration:  *</p>  *   *<pre class="prettyprint">  *&lt;processor class="solr.AddSchemaFieldsUpdateProcessorFactory"&gt;  *&lt;str name="defaultFieldType"&gt;text_general&lt;/str&gt;  *&lt;lst name="typeMapping"&gt;  *&lt;str name="valueClass"&gt;Boolean&lt;/str&gt;  *&lt;str name="fieldType"&gt;boolean&lt;/str&gt;  *&lt;/lst&gt;  *&lt;lst name="typeMapping"&gt;  *&lt;str name="valueClass"&gt;Integer&lt;/str&gt;  *&lt;str name="fieldType"&gt;tint&lt;/str&gt;  *&lt;/lst&gt;  *&lt;lst name="typeMapping"&gt;  *&lt;str name="valueClass"&gt;Float&lt;/str&gt;  *&lt;str name="fieldType"&gt;tfloat&lt;/str&gt;  *&lt;/lst&gt;  *&lt;lst name="typeMapping"&gt;  *&lt;str name="valueClass"&gt;Date&lt;/str&gt;  *&lt;str name="fieldType"&gt;tdate&lt;/str&gt;  *&lt;/lst&gt;  *&lt;lst name="typeMapping"&gt;  *&lt;str name="valueClass"&gt;Long&lt;/str&gt;  *&lt;str name="valueClass"&gt;Integer&lt;/str&gt;  *&lt;str name="fieldType"&gt;tlong&lt;/str&gt;  *&lt;/lst&gt;  *&lt;lst name="typeMapping"&gt;  *&lt;arr name="valueClass"&gt;  *&lt;str&gt;Double&lt;/str&gt;  *&lt;str&gt;Float&lt;/str&gt;  *&lt;/arr&gt;  *&lt;str name="fieldType"&gt;tdouble&lt;/str&gt;  *&lt;/lst&gt;  *&lt;/processor&gt;</pre>  */
 end_comment
@@ -1460,6 +1476,31 @@ argument_list|)
 expr_stmt|;
 break|break;
 block|}
+elseif|else
+if|if
+condition|(
+name|isImmutableConfigSet
+argument_list|(
+name|core
+argument_list|)
+condition|)
+block|{
+specifier|final
+name|String
+name|message
+init|=
+literal|"This ConfigSet is immutable."
+decl_stmt|;
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|BAD_REQUEST
+argument_list|,
+name|message
+argument_list|)
+throw|;
+block|}
 if|if
 condition|(
 name|log
@@ -2035,6 +2076,57 @@ expr_stmt|;
 block|}
 return|return
 name|selector
+return|;
+block|}
+DECL|method|isImmutableConfigSet
+specifier|private
+name|boolean
+name|isImmutableConfigSet
+parameter_list|(
+name|SolrCore
+name|core
+parameter_list|)
+block|{
+name|NamedList
+name|args
+init|=
+name|core
+operator|.
+name|getConfigSetProperties
+argument_list|()
+decl_stmt|;
+name|Object
+name|immutable
+init|=
+name|args
+operator|!=
+literal|null
+condition|?
+name|args
+operator|.
+name|get
+argument_list|(
+name|IMMUTABLE_CONFIGSET_ARG
+argument_list|)
+else|:
+literal|null
+decl_stmt|;
+return|return
+name|immutable
+operator|!=
+literal|null
+condition|?
+name|Boolean
+operator|.
+name|parseBoolean
+argument_list|(
+name|immutable
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+else|:
+literal|false
 return|;
 block|}
 block|}
