@@ -80,6 +80,40 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|impl
+operator|.
+name|XMLResponseParser
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|NamedList
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|util
 operator|.
 name|RestTestBase
@@ -244,15 +278,6 @@ argument_list|,
 literal|"true"
 argument_list|)
 expr_stmt|;
-name|System
-operator|.
-name|setProperty
-argument_list|(
-literal|"enable.update.log"
-argument_list|,
-literal|"false"
-argument_list|)
-expr_stmt|;
 name|createJettyAndHarness
 argument_list|(
 name|tmpSolrHome
@@ -260,7 +285,7 @@ operator|.
 name|getAbsolutePath
 argument_list|()
 argument_list|,
-literal|"solrconfig-managed-schema.xml"
+literal|"solrconfig-schemaless.xml"
 argument_list|,
 literal|"schema-rest.xml"
 argument_list|,
@@ -494,6 +519,131 @@ operator|.
 name|get
 argument_list|(
 literal|"errors"
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"immutable"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testAddSchemaFieldsImmutable
+specifier|public
+name|void
+name|testAddSchemaFieldsImmutable
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|String
+name|error
+init|=
+literal|"error"
+decl_stmt|;
+comment|// check writing an existing field is okay
+name|String
+name|updateXMLSafe
+init|=
+literal|"<add><doc><field name=\"id\">\"testdoc\"</field></doc></add>"
+decl_stmt|;
+name|String
+name|response
+init|=
+name|restTestHarness
+operator|.
+name|update
+argument_list|(
+name|updateXMLSafe
+argument_list|)
+decl_stmt|;
+name|XMLResponseParser
+name|parser
+init|=
+operator|new
+name|XMLResponseParser
+argument_list|()
+decl_stmt|;
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|listResponse
+init|=
+name|parser
+operator|.
+name|processResponse
+argument_list|(
+operator|new
+name|StringReader
+argument_list|(
+name|response
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertNull
+argument_list|(
+name|listResponse
+operator|.
+name|get
+argument_list|(
+name|error
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// check writing a new field is not okay
+name|String
+name|updateXMLNotSafe
+init|=
+literal|"<add><doc><field name=\"id\">\"testdoc\"</field>"
+operator|+
+literal|"<field name=\"newField67\">\"foobar\"</field></doc></add>"
+decl_stmt|;
+name|response
+operator|=
+name|restTestHarness
+operator|.
+name|update
+argument_list|(
+name|updateXMLNotSafe
+argument_list|)
+expr_stmt|;
+name|listResponse
+operator|=
+name|parser
+operator|.
+name|processResponse
+argument_list|(
+operator|new
+name|StringReader
+argument_list|(
+name|response
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|listResponse
+operator|.
+name|get
+argument_list|(
+name|error
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|listResponse
+operator|.
+name|get
+argument_list|(
+name|error
 argument_list|)
 operator|.
 name|toString
